--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,22 @@
 spring.application.name=agregateur_financier
 
-
-
 logging.level.org.springframework=INFO
 
-################### DataSource Configuration ##########################
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/demo
-spring.datasource.username=root
-spring.datasource.password=
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:demo
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=password
 
-################### Hibernate Configuration ##########################
+# SQL initialization
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:DB_scripts/schema.sql
+#spring.sql.init.data-locations=classpath:data.sql
 
-spring.jpa.hibernate.ddl-auto=update
+# H2 Console Configuration (optional, for development)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# JPA Configuration (minimal since we're using SQL scripts)
 spring.jpa.show-sql=true
-
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
