--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,20 +3,30 @@ spring.application.name=agregateur_financier
 logging.level.org.springframework=INFO
 
 # H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:demo
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=admin
-spring.datasource.password=password
+#spring.datasource.url=jdbc:h2:mem:demo
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+
+# SQL initialization
+#spring.sql.init.mode=always
+#spring.sql.init.schema-locations=classpath:DB_scripts/schema.sql
+#spring.sql.init.data-locations=classpath:data.sql
+
+# H2 Console Configuration (optional, for development)
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+
+# JPA Configuration (minimal since we're using SQL scripts)
+#spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/p7_test?serverTimezone=UTC
+
 
 # SQL initialization
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:DB_scripts/schema.sql
-#spring.sql.init.data-locations=classpath:data.sql
-
-# H2 Console Configuration (optional, for development)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# JPA Configuration (minimal since we're using SQL scripts)
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.sql.init.data-locations=classpath:DB_scripts/data.sql
