--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/p7_test?serverTimezone=UTC
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:DB_scripts/schema.sql
 spring.sql.init.data-locations=classpath:DB_scripts/data.sql
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
